# rag-arxiv

./: .env_template  .gitignore  README.md  docker-compose.yml  pyproject.toml  similaridade_de_cosseno.ipynb
postgres/: init.sql
processing/: embeddings.py  process_files.py
rag_arxiv/: rag_query.py  utils.py
rag_arxiv/processing/: embeddings.py  process_files.py
rag_arxiv/prompt/: generate_prompt.py  template.yml
rag_arxiv/retrieval/: retrieve_papers.py
rag_arxiv/scripts/: count_tokens.py  insert_papers.py  insert_text_on_db.py  query_llm.py
rag_arxiv/scripts/migrations/: add_text_to_db.py  create_db.py
rag_arxiv/tests/: example_questions_for_test.py  test_generation.py  utils.py
scripts/: insert_papers.py
scripts/migrations/: create_db.py  utils.py
