[tool.poetry]
name = "rag-arxiv"
version = "0.1.0"
description = ""
authors = [
    "Emerson Lopes <eplopes@inf.ufpel.edu.br>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "==2.9.10"
python-decouple = "^3.8"
openai = "^1.57.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
